--- a/views/results.erb
+++ b/views/results.erb
@@ -6,4 +6,6 @@
 
 <h2>Consonants: <%= @analyzed_text.count_of_consonants %> </h2>
 
+<h2>Most Common Letter: <%= @analyzed_text.most_used_letter.keys.first.upcase %>, used
+<%= @analyzed_text.most_used_letter.values.first %> times</h2>
 <h2>Most Common Letter: _____ used _____ times</h2>
